Added infoPanel and favicon

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+	
 	<div id="result"></div>
+	<div class="info"><img class="logo" src="/images/ShoutLogo.png"></div>
+	<div id="infoCurtain">
+		<div class="infoContent">
+			<h1>Shout</h1>
+		</div>
+	</div>
 	
 	<div class="optionsWrap"></div>
 	<div class="options">
