--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 	<div id="infoCurtain">
 		<div class="infoContent">
 			<h1>Shout</h1>
+
+			<p>
+				Totally random audience suggestions can help push the improvisers skills during rehearsals. I built this little web app to keep 
+				you supplied with fresh inputs, while maintaining the flow of the session. You could also use this if the audience seem to be 
+				suggesting ideas influenced by what has gone before. Enjoy! Martin Joiner
+			</p>
+			<span id="dynamicCont"></span>
 		</div>
 	</div>
 	
@@ -24,11 +31,14 @@
 		<div class="option"><input type="checkbox" id="TensionLevel" checked><label for="TensionLevel">Tension Level</label></div>
 		<div class="option"><input type="checkbox" id="Gathering"><label for="Gathering">Gathering</label></div>
 		<div class="option"><input type="checkbox" id="Place"><label for="Place">Place</label></div>
+		<div class="option"><input type="checkbox" id="adjNoun"><label for="adjNoun">Adj. + Noun</label></div>
 	</div>
 	<div class="buttonWrap"></div>
 	<button id="btnGenerate">Shout</button>
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+	<script src="/js/adj.js"></script>
+	<script src="/js/nouns.js"></script>
 	<script src="/js/shout.js"></script>
 </body>
 </html>
