Changed page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>Audience Suggestion Generator</title>
+	<title>SHOUT - Audience Suggestion Generator</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 </head>
