Added Twitter handle to info, couple of styling tweaks

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
 			<p>
 				Totally random audience suggestions can help push the improvisers skills during rehearsals. I built this little web app to keep 
 				you supplied with fresh inputs, while maintaining the flow of the session. You could also use this if the audience seem to be 
-				suggesting ideas influenced by what has gone before. Enjoy! Martin Joiner
+				suggesting ideas influenced by what has gone before. Enjoy! <strong>Martin Joiner</strong> <a target="_blank" href="https://twitter.com/MartinJoiner">@MartinJoiner</a>
 			</p>
 			<span id="dynamicCont"></span>
+			<h2>Adjective + Noun</h2>
+			<p>
+				An adjective and a noun are randomly chosen from a list of 1134 and 980 respectively resulting in the potential to create over 1.1 million combinations. Try getting an 
+				audience to achieve <em>that</em> level of lateral thinking!
+			</p>
 		</div>
 	</div>
 	
