Added Open Graph and preview images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<meta property="og:site_name" content="SHOUT - Audience Suggestion Generator" /> 
+	<meta property="og:url" content="http://shout.improvnet.co.uk/" /> 
+	<meta property="og:title" content="SHOUT - Audience Suggestion Generator" /> 
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Totally random audience suggestions can help push the improvisers skills during rehearsals. I built this little web app to keep 
+				you supplied with fresh inputs, while maintaining the flow of the session. You could also use this if the audience seem to be 
+				suggesting ideas influenced by what has gone before."/>
+	<meta property="og:image" content="http://shout.improvnet.co.uk/images/OG-Shout-Preview.jpg" />
+	<meta property="fb:admins" content="511938722" />
+
 	<title>SHOUT - Audience Suggestion Generator</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
