--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<div class="option"><input type="checkbox" id="TensionLevel" checked><label for="TensionLevel">Tension Level</label></div>
 		<div class="option"><input type="checkbox" id="Gathering"><label for="Gathering">Gathering</label></div>
 		<div class="option"><input type="checkbox" id="Place"><label for="Place">Place</label></div>
+		<div class="option"><input type="checkbox" id="Animal"><label for="Animal">Animal</label></div>
 		<div class="option"><input type="checkbox" id="Verb"><label for="Verb">Verb</label></div>
 		<div class="option"><input type="checkbox" id="adjNoun"><label for="adjNoun">Adj. + Noun</label></div>
 	</div>
