--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,9 @@
 			<p>
 				Totally random audience suggestions can help push the improvisers skills during rehearsals. I built this little web app to keep 
 				you supplied with fresh inputs, while maintaining the flow of the session. You could also use this if the audience seem to be 
-				suggesting ideas influenced by what has gone before. Enjoy! <strong>Martin Joiner</strong> <a target="_blank" href="https://twitter.com/MartinJoiner">@MartinJoiner</a>
+				suggesting ideas influenced by what has gone before. 
+			</p>
+			<p><strong>Enjoy!</strong> By Martin Joiner, a <a target="_blank" href="http://martinjoiner.co.uk/">full-stack developer in Bristol</a> (<a target="_blank" href="https://twitter.com/MartinJoiner">@MartinJoiner on Twitter</a>)
 			</p>
 			<span id="dynamicCont"></span>
 			<p>
