Broke JS up into several files and implemented Gulp to build down

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -65,8 +65,7 @@
 	<div class="buttonWrap"></div>
 	<button id="btnGenerate">Shout</button>
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-	<script src="/js/shout.js"></script>
-	<script src="/js/nouns.js"></script>
+	<script src="/js/all.min.js"></script>
+
 </body>
 </html>
