--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,6 +14,8 @@
 	<meta property="og:image" content="http://shout.butterscotchworld.co.uk/images/OG-Shout-Preview.jpg" />
 	<meta property="fb:admins" content="511938722" />
 
+	<meta name="google-site-verification" content="WCC86FNpOOJvgMPpaRuY_PJ3x5dqYOAaJIYZWL7k93U" />
+
 	<title>SHOUT - Audience Suggestion Generator</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
